resources/assets/styles/layouts/_space.scss
/* eslint-disable */

.utk-space {
  &--related {
    > h3 {
      margin: 0 0 $golden-ratio-3;
      padding: 0;
      font-weight: 700;
      font-family: $sans;
      font-size: $type-2;
      color: $smokey;
      letter-spacing: -0.018em;
      text-align: center;
    }
  }

  &--hours {
    .DayPickerInput {
      position: relative;
      height: $golden-ratio-4;
      transition: $transition-all;
      border-radius: $golden-ratio-4;
      box-shadow: $box-shadow;

      &:hover,
      &:focus {
        background-color: $gray-0;
        box-shadow: inset $box-shadow;
      }

      > input {
        border: none;
        color: $smokey;
        font-family: $sans;
        font-weight: 400;
        font-size: $type-3;
        cursor: pointer;
        height: $golden-ratio-4;
        position: relative;
        z-index: 1;
        background: transparent !important;
        padding: 0 $golden-ratio-4;
        letter-spacing: -0.018em;
      }

      &::before {
        left: 0;
        top: 0;
        content: "\E81C";
        font-family: fontello, monospace;
        border-radius: $golden-ratio-4;
        font-style: normal;
        font-size: $type-3;
        color: $rock;
        speak: none;
        font-weight: 400;
        display: flex;
        justify-content: center;
        align-items: center;
        position: absolute;
        height: $golden-ratio-4 !important;
        width: $golden-ratio-4 !important;
        -webkit-font-smoothing: antialiased;
        z-index: 0;
      }

      &::after {
        right: 0;
        top: 0;
        content: "\E805";
        font-family: fontello, monospace;
        border-radius: $golden-ratio-4;
        font-style: normal;
        font-size: $type-1;
        color: $rock;
        speak: none;
        font-weight: 400;
        display: flex;
        justify-content: center;
        align-items: center;
        position: absolute;
        height: $golden-ratio-4 !important;
        width: $golden-ratio-4 !important;
        -webkit-font-smoothing: antialiased;
        z-index: 0;
      }
    }
  }
}

article.space {
  .utk-space {
    &--hours {
      display: flex;

      .DayPickerInput {
        height: 39px;
        background-color: $white !important;
        border-radius: $golden-ratio-4;

        > input {
          font-size: $type-2;
          height: 39px !important;
          padding: 0 39px;
        }

        &::before {
          font-size: $type-2;
        }

        &::before,
        &::after {
          height: 39px !important;
          width: 39px !important;
        }
      }
    }

    &--time,
    &--hours-message {
      font-weight: 700;
      font-style: normal;
      font-size: $type-1;
      display: flex;
      justify-content: left;
      align-items: center;

      &--indicator {
        display: block;
        width: 9px;
        height: 9px;
        border-radius: 9px;
        background-color: $switchgrass;
        margin-right: $golden-ratio-0;
      }
    }
  }

  .article--grid--image .utk-space--time,
  .article--grid--image .utk-space--hours-message {
    position: absolute;
    left: $golden-ratio-2;
    bottom: $golden-ratio-0;
    font-size: $type-0;
    -webkit-font-smoothing: antialiased;
  }
}

.page-body--content-formal .facetwp-template > .facetwp-template--articles {
  margin-left: -23.5px;
  width: calc(100% + 47px);

  @include respond(md, sm) {
    margin-left: -14.5px;
    width: calc(100% + 29px);
  }

  @include respond(xs) {
    flex-basis: 100%;
    padding: 0;
    margin-left: 0;
    width: 100%;
  }

  article.space {
    width: auto;
    flex-basis: calc(100% / 4);
    margin-right: 0 !important;
    padding: 0 23.5px;

    &.space-featured {
      flex-basis: calc(100% / 2);

      @include respond(md, sm) {
        flex-basis: calc(100% / 2) !important;
        padding: 0 14.5px;
      }

      @include respond(xs) {
        flex-basis: calc(100% / 1) !important;
        padding: 0;
      }
    }

    @include respond(md) {
      flex-basis: calc(100% / 3);
      padding: 0 14.5px;
    }

    @include respond(sm) {
      flex-basis: calc(100% / 2) !important;
      padding: 0 14.5px;
    }

    @include respond(xs) {
      flex-basis: 100% !important;
      padding: 0;
      margin-bottom: $golden-ratio-1;
    }

    .utk-space--time {
      text-shadow: $box-shadow-float;
    }
  }
}

.utk-modal .article--populate--inner-space {
  padding: 0;
  background-color: $gray-0;

  article {
    height: 100%;
    display: flex;
    flex-wrap: wrap;

    @include respond(xs) {
      flex-direction: column-reverse;
    }

    header {
      h3 {
        margin: 0 0 $golden-ratio-2;
        padding: 0;
        font-size: $type-4;
        line-height: 1.29em;
        font-weight: 700;
        -webkit-font-smoothing: antialiased;
        letter-spacing: -0.029em;
        color: $smokey;
        text-shadow: $box-shadow-float-submenu;
      }
    }

    .utk-space--content {
      width: $gr-short;
      position: absolute;
      right: 0;
      top: 0;
      z-index: 1;
      height: 100%;
      background-color: $white;
      box-shadow: $box-shadow;

      @include respond(xs) {
        width: 100%;
        height: 61.8%;
      }

      &--wrap {
        padding: $golden-ratio-3;
        overflow-y: scroll;
        overflow-x: hidden;
        height: 100%;
        padding-bottom: 182px;

        &--funnel {
          font-size: $type-1;
          display: flex;
          flex-direction: column;
          position: absolute;
          bottom: 0;
          width: 100%;
          padding: $golden-ratio-4 $golden-ratio-3 $golden-ratio-3;

          @include filter-gradient(rgba($white, 0), 0, rgba($white, 1), calc(100% - 76px));

          a {
            margin-top: $golden-ratio-2;
            margin-right: 0;

            &:first-child {
              margin: 0;
            }
          }
        }
      }

      header > a.utk-space--permalink {
        h3 {
          margin: 0 0 $golden-ratio-2;
          padding: 0;
          font-size: $type-4;
          line-height: 1.29em;
          font-weight: 700;
          letter-spacing: -0.029em;
        }

        &:hover,
        &:focus {
          h3 {
            color: $globe;
          }
        }
      }

      &--description {
        p {
          font-size: $type-2;

          &:last-child {
            margin-bottom: 0;
          }
        }
      }
    }

    .utk-space-actions {
      display: flex;
      margin-bottom: $golden-ratio-1;
      flex-wrap: wrap;
      justify-content: space-between;

      .utk-space--hours {
        flex-direction: column;
      }

      @include respond(xs) {
        left: 0;
        position: relative;
        align-self: flex-start;
        order: 1;
        top: unset;

        .utk-space--hours {
          flex-direction: column;
        }
      }

      .utk-date-picker {
        font-size: $type-1;

        .utk-date-picker-select {
          line-height: 1.47em;
          display: flex;
          align-items: center;

          > span {
            font-size: 0.76em;
            color: $rock;
            margin-left: $golden-ratio-0;
          }
        }
      }

      .utk-space--time--span,
      .utk-space--time-message {
        font-size: $type-2;
        font-weight: 700;
        color: $smokey;
        display: flex;
        align-items: center;
        margin-top: $golden-ratio-1;
      }
    }
  }
}

.utk-space--media {
  width: $gr-long;
  background-color: $gray-0;
  position: relative;
  z-index: 1;
  padding: $golden-ratio-3 $golden-ratio-3 9px;

  @include respond(xs) {
    width: 100%;
    height: 61.8%;
    clip-path: unset;
  }

  &--slider {
    width: 100%;
    height: 100%;
    position: relative;

    > img {
      width: 100%;
      object-fit: contain;
      overflow: hidden;
      margin-bottom: 20px;
    }

    .utk-space-slider-display {
      position: relative;
      left: 0;
      top: 0;
      z-index: 0;
      width: 100%;

      div {
        width: 100%;
        display: flex;
      }

      img {
        height: 100%;
        object-fit: contain;
        overflow: hidden;
      }
    }

    .utk-space-slider-nav {
      z-index: 2;
      margin-top: 9px;

      .slick-slide {
        cursor: pointer !important;
        width: $golden-ratio-5;
        height: $golden-ratio-4;
        transition: $transition-all-fast;
        background-color: $white;
        margin: 9px 9px 20px;

        &::after {
          content: '';
          width: 0;
          height: 6px;
          background-color: $orange;
          position: absolute;
          margin-top: -8px;
          box-shadow: none;
          transition: $transition-all-load;
        }

        img {
          transition: $transition-all-fast;
          box-shadow: $box-shadow-float;
        }

        &.slick-current {
          &::after {
            width: $golden-ratio-5;
            margin-top: -8px;
            box-shadow: $box-shadow-float;
          }
        }
      }
    }

    &--overlay {
      position: absolute;
      z-index: 1;
      bottom: 0;
      height: $golden-ratio-6;
      width: 100%;
      justify-content: flex-start;
      align-items: flex-end;
      align-content: flex-end;
      padding: $golden-ratio-2;
      display: none;

      @include filter-gradient(rgba($smokeyx, 0), 0, rgba($smokeyx, 0.92), calc(100% - 47px));

      .btn {
        height: $golden-ratio-4;
        margin-right: $golden-ratio-2 !important;
        box-shadow: $box-shadow-float;
        border-radius: 6px;

        .icon-right-open {
          border-top-right-radius: 6px;
          border-bottom-right-radius: 6px;
        }

        &:last-child {
          margin-right: 0 !important;
        }

        &.btn-inverse {
          color: $white !important;
        }
      }

      @include respond(xs) {
        display: none;
      }
    }
  }
}

